--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,43 @@
+<!-- app/views/layouts/application.html.erb -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ProjectConversation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>ProjectConversation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
-  </body>
+<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+<nav class="bg-blue-500 p-4 text-white">
+  <div class="container mx-auto">
+    <h1 class="text-xl font-bold"><%= link_to 'ProjectConversation', root_path %></h1>
+    <% if user_signed_in? %>
+      <p>Welcome, <%= current_user.email %>! <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'ml-4' %></p>
+    <% else %>
+      <%= link_to 'Login', new_user_session_path, class: 'ml-4' %>
+      <%= link_to 'Sign Up', new_user_registration_path, class: 'ml-4' %>
+    <% end %>
+  </div>
+</nav>
+
+<div class="container mx-auto p-4">
+  <% if notice %>
+    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-2 rounded mb-4">
+      <%= notice %>
+    </div>
+  <% end %>
+  <% if alert %>
+    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-2 rounded mb-4">
+      <%= alert %>
+    </div>
+  <% end %>
+
+  <%= yield %>
+</div>
+</body>
 </html>
