--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,7 +8,7 @@
     <div class="bg-white shadow-md rounded p-4">
       <h2 class="text-xl font-semibold"><%= link_to project.title, project_path(project), class: 'text-blue-500 hover:underline' %></h2>
       <p class="text-gray-700"><%= truncate(project.description, length: 100) %></p>
-      <p class="text-sm text-gray-500">Status: <%= project.status.capitalize %></p>
+      <p class="text-sm text-gray-500">Status: <%= project.status&.capitalize %></p>
       <p class="text-sm text-gray-500">Created by: <%= project.user.email %></p>
     </div>
   <% end %>
