This adds functionality of editing user details and changing its role , updated navigation, added pagination.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,22 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
+  <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
 </head>
 
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
 <nav class="bg-blue-500 p-4 text-white">
-  <div class="container mx-auto">
+  <div class="container mx-auto flex justify-between items-center">
     <h1 class="text-xl font-bold"><%= link_to 'ProjectConversation', root_path %></h1>
-    <% if user_signed_in? %>
-      <p>Welcome, <%= current_user.email %>! <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'ml-4' %></p>
-    <% else %>
-      <%= link_to 'Login', new_user_session_path, class: 'ml-4' %>
-      <%= link_to 'Sign Up', new_user_registration_path, class: 'ml-4' %>
-    <% end %>
+
+    <div>
+      <% if user_signed_in? %>
+        <%= link_to 'Projects', projects_path, class: 'ml-4 text-white hover:underline' %>
+        <%= link_to 'Edit Profile', edit_user_registration_path, class: 'ml-4 text-white hover:underline' %>
+        <p class="inline">Welcome, <%= current_user.email %>!</p>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'ml-4 text-white hover:underline' %>
+      <% else %>
+        <%= link_to 'Login', new_user_session_path, class: 'ml-4 text-white hover:underline' %>
+        <%= link_to 'Sign Up', new_user_registration_path, class: 'ml-4 text-white hover:underline' %>
+      <% end %>
+    </div>
   </div>
 </nav>
 
