--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,4 +2,8 @@
 <div class="border-b border-gray-300 mb-2 pb-2">
   <p class="text-gray-700"><%= comment.content %></p>
   <p class="text-sm text-gray-500">Posted by: <%= comment.user.email %> on <%= comment.created_at.strftime("%B %d, %Y at %I:%M %p") %></p>
+  <% if current_user == comment.user || current_user.admin? %>
+    <%= link_to 'Edit', edit_project_comment_path(@project, comment), class: 'text-blue-500 hover:underline mr-2' %>
+    <%= link_to 'Delete', project_comment_path(@project, comment), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500 hover:underline' %>
+  <% end %>
 </div>
