--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,12 @@
     <% end %>
   </div>
 
+  <!-- Pagination links for comments -->
+  <div class="mt-4">
+    <%= paginate @comments %>
+    <%#= paginate @comments, theme: 'erb' %>
+  </div>
+
   <h3 class="text-lg font-semibold mt-4">Add a Comment</h3>
   <%= turbo_frame_tag 'comment_form' do %>
     <%= render 'comments/form', comment: @project.comments.build %>
