--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,12 @@
 <!-- app/views/comments/_form.html.erb -->
-<%= form_with(model: [@project, comment], local: true, class: "mt-2") do |form| %>
-  <div class="mb-4">
-    <%= form.text_area :content, placeholder: "Write your comment...", class: "shadow border rounded w-full py-2 px-3 text-gray-700 mb-2" %>
+<%= form_with(model: [@project, comment], local: true, class: "mt-4 bg-white p-6 rounded-lg shadow-md") do |form| %>
+  <!-- Comment Text Area -->
+  <div class="mb-6">
+    <%= form.text_area :content, placeholder: "Write your comment...", rows: 4, class: "w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700 placeholder-gray-400 transition duration-300 ease-in-out" %>
   </div>
-  <%= form.submit "Add Comment", class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
+
+  <!-- Submit Button -->
+  <div class="text-right">
+    <%= form.submit "Add Comment", class: "bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-6 rounded-md shadow-md transition duration-300 ease-in-out" %>
+  </div>
 <% end %>
