--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -1,8 +1,11 @@
-<%# Non-link tag that stands for skipped pages...
-  - available local variables
-    current_page:  a page object for the currently displayed page
-    total_pages:   total number of pages
-    per_page:      number of items to fetch per page
-    remote:        data-remote
+<%# Non-link tag that stands for skipped pages (e.g., '...') -%>
+<%# Available local variables:
+    current_page:  A page object for the currently displayed page
+    total_pages:   Total number of pages
+    per_page:      Number of items to fetch per page
+    remote:        Data-remote
 -%>
-<span class="page gap"><%= t('views.pagination.truncate').html_safe %></span>
+
+<span class="page gap inline-block bg-gray-200 text-gray-600 font-medium py-2 px-4 rounded-full mx-1">
+  <%= t('views.pagination.truncate').html_safe %>
+</span>
