--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -1,11 +1,17 @@
-<%# Link to the "Last" page
-  - available local variables
-    url:           url to the last page
-    current_page:  a page object for the currently displayed page
-    total_pages:   total number of pages
-    per_page:      number of items to fetch per page
-    remote:        data-remote
+<%# Link to the "Last" page -%>
+<%# Available local variables:
+    url:           URL to the last page
+    current_page:  A page object for the currently displayed page
+    total_pages:   Total number of pages
+    per_page:      Number of items to fetch per page
+    remote:        Data-remote
 -%>
+
 <span class="last">
-  <%= link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, remote: remote %>
+  <%= link_to_unless current_page.last?,
+                     t('views.pagination.last').html_safe,
+                     url,
+                     remote: remote,
+                     class: "inline-block bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-full transition duration-200 ease-in-out shadow-sm mx-1"
+  %>
 </span>
