--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,15 +1,12 @@
-<%# The container tag
-  - available local variables
-    current_page:  a page object for the currently displayed page
-    total_pages:   total number of pages
-    per_page:      number of items to fetch per page
-    remote:        data-remote
-    paginator:     the paginator that renders the pagination tags inside
--%>
 <%= paginator.render do -%>
-  <nav class="pagination" role="navigation" aria-label="pager">
+  <nav class="pagination flex justify-center items-center space-x-2 mt-8 p-4 bg-gray-100 rounded-lg shadow-md" role="navigation" aria-label="pager">
+    <!-- "First" Page Link -->
     <%= first_page_tag unless current_page.first? %>
+
+    <!-- "Previous" Page Link -->
     <%= prev_page_tag unless current_page.first? %>
+
+    <!-- Page Numbers -->
     <% each_page do |page| -%>
       <% if page.display_tag? -%>
         <%= page_tag page %>
@@ -17,8 +14,12 @@
         <%= gap_tag %>
       <% end -%>
     <% end -%>
+
+    <!-- "Next" Page Link -->
     <% unless current_page.out_of_range? %>
       <%= next_page_tag unless current_page.last? %>
+
+      <!-- "Last" Page Link -->
       <%= last_page_tag unless current_page.last? %>
     <% end %>
   </nav>
