--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,12 @@
 <!-- app/views/projects/new.html.erb -->
-<h1 class="text-2xl font-bold mb-4">New Project</h1>
+<div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-8 mt-12">
+  <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Create New Project</h1>
 
-<%= render 'form', project: @project %>
+  <%= render 'form', project: @project %>
 
-<%= link_to 'Back to Projects', projects_path, class: 'text-blue-500 hover:underline' %>
+  <!-- Back to Projects Link -->
+  <div class="text-center mt-8">
+    <%= link_to 'Back to Projects', projects_path, class: 'text-blue-500 hover:underline text-lg' %>
+  </div>
+</div>
+
