--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,12 +1,11 @@
 <!-- app/views/projects/new.html.erb -->
-<div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-8 mt-12">
-  <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Create New Project</h1>
-
+<%= turbo_frame_tag 'new_project_form' do %>
+  <div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-8 mt-12">
+    <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Create New Project</h1>
   <%= render 'form', project: @project %>
-
-  <!-- Back to Projects Link -->
-  <div class="text-center mt-8">
-    <%= link_to 'Back to Projects', projects_path, class: 'text-blue-500 hover:underline text-lg' %>
+    <!-- Back to Projects Link -->
+    <div class="text-center mt-8">
+      <%= link_to 'Back to Projects', projects_path, class: 'text-blue-500 hover:underline text-lg' %>
+    </div>
   </div>
-</div>
-
+<% end %>
