--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,9 +10,11 @@
   <% end %>
 
   <!-- Projects List -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-    <% Project.all.each do |project| %>
-      <%= render partial: 'projects/project', locals: { project: project } %>
-    <% end %>
+  <div id="projects_list">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <% Project.all.each do |project| %>
+        <%= render partial: 'projects/project', locals: { project: project } %>
+      <% end %>
+    </div>
   </div>
 </div>
